Small edits and bug fixes

--- a/TurfAppWpf/TurfAppWpf/App.config
+++ b/TurfAppWpf/TurfAppWpf/App.config
@@ -4,6 +4,6 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
   <connectionStrings>
-    <add name="Database" connectionString="Server=mssql.fhict.local;Database=dbi367608;User Id=dbi367608;Password=Trakcadenk4;" providerName="System.Data.SqlClient" />
+    <add name="Database" connectionString="Server=mssql.fhict.local;Database=dbi367608;User Id=dbi367608;Password=toor;" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
